test/static/wrong/rec1.kk.out
test/static/wrong/rec1.kk(4,25): error: function is applied to too many arguments
 context : rfix(f,x)
 term : rfix
 inferred type: (f : _a) -> _e _b